# time-test-facility

./: .envrc  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: benchmark.yml
install/: build.sh  full.sh  install.sh  run.sh
src/cpp/: main.cpp
src/cpp/loop-cos/: main.cpp
src/python/: benchmarks.py  main.py
src/python/loop-cos/: main.py
tests/cpp/loop-cos/: main_test.cpp
tests/python/loop-cos/: main_test.py
